--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Fashion Shop Admin Panel - Manage your fashion store with ease" />
+    <title>Fashion Shop Admin Panel</title>
   </head>
   <body>
     <div id="root"></div>
